Apparently wasn't using Java 8, now I am